modern style added to index page

--- a/index.html
+++ b/index.html
@@ -13,13 +13,16 @@
         <video autoplay muted loop id="hero-video">
             <source src="hero.mp4" type="video/mp4">
         </video>
+
         <div class="hero-content">
             <h1>Welcome to your Library!</h1>
             <p>
                 Your go-to place to store and manage your book collection
             </p>
-        </div>
-    </section>
+            <!-- add main.html later -->
+            <a href="#" class="cta-button">Manage your Library</a>
+            </div>
+        </section>
 
     <script src="script.js"></script>
 </body>
