functional JS missing styling

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         <div class="hero-content">
             <h1>Welcome to your Library!</h1>
             <p>
-                Your go-to place to store and manage your book collection
+                Your go-to place to store, track, and manage your book collection
             </p>
             <!-- add main.html later -->
-            <a href="#" class="cta-button">Manage your Library</a>
+            <a href="library.html" class="cta-button">Manage your Library</a>
             </div>
         </section>
 
