--- a/library.html
+++ b/library.html
@@ -10,7 +10,7 @@
     <header class="intro">
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="#">Contact</a></li>
                 <li>
                     <a href="#" class="add-book">
@@ -65,7 +65,7 @@
                 placeholder="Notes"
                 autocomplete="off"
                 required>
-                <input type="submit" value="Submit">
+                <input type="submit" value="Submit" id="submit-btn">
             </form>
         </div>
     </section>
