--- a/library.html
+++ b/library.html
@@ -23,6 +23,9 @@
                 </li>
             </ul>
         </nav>
+        <div class="author">
+            <a href="https://github.com/Archaick/MyLibrary" target="_blank"><div class="github-icon"></div></a>
+        </div>
     </header>
 
     <button id="new-book">+</button>
@@ -42,6 +45,7 @@
                 name="title"
                 placeholder="Book's title"
                 autocomplete="off"
+                maxlength="64"
                 required
                 >
                 <label for="author">Author:</label>
@@ -50,6 +54,7 @@
                 name="author"
                 placeholder="Add author's name"
                 autocomplete="off"
+                maxlength="64"
                 required
                 >
                 <label for="pages">Number of pages:</label>
